Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h

#define MAX_AXIS        48
#define MAX_AXIS        32
#define MAX_AXIS        48
#define MAX_AXIS        32
#define ALL_AXES        (-1)
#define EW_NODLL        (-15)           
#define EW_BUS          (-11)           
#define EW_SYSTEM2      (-10)           
#define EW_HSSB         (-9)            
#define EW_HANDLE       (-8)            
#define EW_VERSION      (-7)            
#define EW_UNEXP        (-6)            
#define EW_SYSTEM       (-5)            
#define EW_PARITY       (-4)            
#define EW_MMCSYS       (-3)            
#define EW_RESET        (-2)            
#define EW_BUSY         (-1)            
#define EW_OK           0               
#define EW_FUNC         1               
#define EW_NOPMC        1               
#define EW_LENGTH       2               
#define EW_NUMBER       3               
#define EW_RANGE        3               
#define EW_ATTRIB       4               
#define EW_TYPE         4               
#define EW_DATA         5               
#define EW_NOOPT        6               
#define EW_PROT         7               
#define EW_OVRFLOW      8               
#define EW_PARAM        9               
#define EW_BUFFER       10              
#define EW_PATH         11              
#define EW_MODE         12              
#define EW_REJECT       13              
#define EW_DTSRVR       14              
#define DNC_NORMAL	(-1)		
#define DNC_CANCEL	(-32768)	
#define DNC_OPENERR	(-514)		
#define DNC_NOFILE	(-516)		
#define DNC_READERR	(-517)		
typedef struct odbact {
    short   dummy[2] ;  
    long    data ;      
} ODBACT ;
typedef struct odbaxis {
    short   dummy ;             
    short   type ;              
    long    data[MAX_AXIS] ;    
} ODBAXIS ;
typedef struct odbdy {
    short   dummy ;
    short   axis ;      
    short   alarm ;     
    short   prgnum ;    
    short   prgmnum ;   
    long    seqnum ;    
    long    actf ;      
    long    acts ;      
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY ;
typedef struct odbdy2 {
    short   dummy ;
    short   axis ;       
    long    alarm ;      
    long    prgnum ;     
    long    prgmnum ;    
    long    seqnum ;     
    long    actf ;       
    long    acts ;       
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY2 ;
typedef struct idbwrr {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRR;
typedef struct idbwra {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRA;
typedef struct iodbovl {
    short   datano;             
    short   type;               
    long    data[2][MAX_AXIS];  
} IODBOVL;
typedef struct odbspn {
    short   datano;     
    short   type;       
    short   data[MAX_SPINDLE];    
} ODBSPN;
typedef struct odbdncdgn {
    short          ctrl_word;
    short          can_word;
    char           nc_file[16];
    unsigned short read_ptr;
    unsigned short write_ptr;
    unsigned short empty_cnt;
    unsigned long  total_size;
} ODBDNCDGN;
typedef struct odbup {
    short   dummy[2] ;  
    char    data[256] ; 
} ODBUP ;   
typedef struct odbbuf {
    short   dummy[2] ;  
    short   data ;      
} ODBBUF ;
typedef struct prgdir {
    char    prg_data[256] ; 
} PRGDIR ;  
typedef struct odbnc {
    union {
        struct {
            short   reg_prg ;       
            short   unreg_prg ;     
            long    used_mem ;      
            long    unused_mem ;    
        } bin ;             
        char    asc[31] ;   
    } u ;
} ODBNC ;
typedef struct odbpro {
    short   dummy[2] ;  
    short   data ;      
    short   mdata ;     
} ODBPRO ;
typedef struct odbseq {
    short   dummy[2] ;  
    long    data ;      
} ODBSEQ ;
typedef struct odbmdip {
    short   mdiprog;    
    long    mdipntr;    
    short   crntprog;   
    long    crntpntr;   
} ODBMDIP;
typedef struct odbtofs {
    short   datano ;    
    short   type ;      
    long    data ;      
} ODBTOFS ;
typedef struct iodbto {
    short   datano_s ;  
    short   type ;      
    short   datano_e ;  
    union {
        long    m_ofs[5] ;      
        long    m_ofs_a[5] ;    
        long    m_ofs_b[10] ;   
        long    m_ofs_c[20] ;   
        struct  {
            short   tip ;
            long    data[1] ;
        } m_ofs_at[5] ;         
        struct  {
            short   tip ;
            long    data[2] ;
        } m_ofs_bt[5] ;         
        struct  {
            short   tip ;
            long    data[4] ;
        } m_ofs_ct[5] ;         
        short   t_tip[5] ;      
        long    t_ofs[5] ;      
        struct  {
            short   tip ;
            long    data[4] ;
        } t_ofs_a[5] ;          
        struct {
            short   tip ;
            long    data[8] ;
        } t_ofs_b[5] ;          
        long    t_ofs_2g[15];   
        long    m_ofs_cnr[10];  
        struct  {
                long    data[2];
        } t_ofs_ex[5];		     
    } u ;   
} IODBTO ;
typedef struct odbproo8 {
     short   dummy[2] ;  
     long    data ;      
     long    mdata ;     
} ODBPROO8 ;
typedef struct odbmdipo8 {
    long   mdiprog;     
    long   mdipntr;     
    long   crntprog;    
    long   crntpntr;    
} ODBMDIPO8;
FWLIBAPI short WINAPI cnc_actf( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_absolute( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_machine( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_distance( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_skip( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_srvdelay( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_accdecdly( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rddynamic( unsigned short, short, short, ODBDY * ) ;
FWLIBAPI short WINAPI cnc_acts( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_wrrelpos( unsigned short, short, IDBWRR * ) ;
FWLIBAPI short WINAPI cnc_prstwkcd( unsigned short, short, IDBWRA * ) ;
FWLIBAPI short WINAPI cnc_rdmovrlap( unsigned short, short, short, IODBOVL * ) ;
FWLIBAPI short WINAPI cnc_rdspload( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspmaxrpm( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspgear( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_absolute2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rddncdgndt( unsigned short, ODBDNCDGN * ) ;
FWLIBAPI short WINAPI cnc_upload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_cupload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_buff( unsigned short, ODBBUF * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir( unsigned short, short, short, short, unsigned short, PRGDIR * ) ;
FWLIBAPI short WINAPI cnc_rdproginfo( unsigned short, short, short, ODBNC * ) ;
FWLIBAPI short WINAPI cnc_rdprgnum( unsigned short, ODBPRO * ) ;
FWLIBAPI short WINAPI cnc_rdseqnum( unsigned short, ODBSEQ * ) ;
FWLIBAPI short WINAPI cnc_rdmdipntr( unsigned short, ODBMDIP * ) ;
FWLIBAPI short WINAPI cnc_rdtofs( unsigned short, short, short, short, ODBTOFS * ) ;
FWLIBAPI short WINAPI cnc_rdtofsr( unsigned short, short, short, short, short, IODBTO * ) ;
FWLIBAPI short WINAPI cnc_wrtofsr( unsigned short, short, IODBTO * ) ;
#define ODBPRO		ODBPROO8
#define ODBMDIP		ODBMDIPO8
#define cnc_rdprogdir	cnc_rdprogdiro8
#define cnc_rdprgnum	cnc_rdprgnumo8
#define cnc_rddynamic	cnc_rddynamico8
#define cnc_rdmdipntr	cnc_rdmdipntro8